# devskill

./: .github-sync-trigger  README.md  tax-receipt-trigger.md  winskill
cn-llm-router/: SKILL.md  config.example.json  version.json
cn-model-gateway/: README.md  SKILL.md  main.py
contract-review/: README.md  SKILL.md  pyproject.toml  requirements.txt
contract-review/assets/: report_template.md
contract-review/references/: compliance_checklist.md  contract_types.yaml  legal_basis.md  modification_templates.yaml  risk_rules.yaml
contract-review/references/checklists/: capital_increase.md  construction.md  equity_transfer.md  ip_license.md  labor_contract_deep.md  nda.md  procurement_framework.md  valuation_adjustment.md
contract-review/references/contract_types/: capital_increase.yaml  construction.yaml  equity_transfer.yaml  ip_license.yaml  labor_contract_deep.yaml  nda.yaml  procurement_framework.yaml  valuation_adjustment.yaml
contract-review/references/llm_prompts/: capital_increase.md  construction.md  equity_transfer.md  ip_license.md  labor_contract_deep.md  nda.md  procurement_framework.md  valuation_adjustment.md
contract-review/scripts/: __init__.py  docx_generator.py  extract_text.py  generate_report.py  hardware_detector.py  history_manager.py  llm_review.py  main.py  parse_structure.py  rule_engine.py  updater.py
dgngjx-skill/: SKILL.md
gov-procurement-analyst/: README.md  SKILL.md
kingdoc/: README.md  SKILL.md  setup.ps1  setup.sh
multi-agent-orchestrator/: SKILL.md
privacy-search/: SKILL.md  requirements.txt
receipt-compliance/: MEMORY.md  SKILL.md
skill-security-checker/: SKILL.md  _meta.json
skill-security-scanner/: SKILL.md  _meta.json
tax-receipt-compliance/: .github-sync  .github-sync-trigger  SKILL.md
video-analyzer/: README.md  SKILL.md  config.yaml  gitignore.txt  main.py  requirements.txt
wecom-voice-agent/: README.md  (+1 more)
(+270 files in other folders)
