[project]
name = "contract-review"
version = "2.3.0"
description = "中文合同智能风险审查工具"
requires-python = ">=3.8"
dependencies = [
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "PyMuPDF>=1.23.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7.0", "opencv-python>=4.8.0", "PyMuPDF>=1.23.0"]
llm = ["openai>=1.0.0", "requests>=2.31.0"]
all = [
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "PyMuPDF>=1.23.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
contract-review = "scripts.main:main"
